--- a/intl.zh-CN/产品简介/使用限制.md
+++ b/intl.zh-CN/产品简介/使用限制.md
@@ -1,30 +1,30 @@
-# 使用限制 {#concept_gjy_gkn_tdb .concept}
+# 使用限制
 
-DDH有以下使用限制。
+本章节介绍DDH相关的使用限制。
 
-**说明：** DDH上创建的ECS实例，除了下表所述的使用限制外，还适用ECS资源其他使用限制，详细信息，请参见 云服务器ECS 的 [使用限制](../../../../intl.zh-CN/用户指南/使用限制.md#)。
+DDH相关的使用限制如下表所示。除下表所述使用限制外，ECS资源的使用限制也适用于在DDH上创建的ECS实例，详情请参见[ECS资源使用限制](/intl.zh-CN/产品简介/使用限制.md)。
 
 |限制项|限制描述|例外申请方式（例外上限）|
 |:--|:---|:-----------|
-|创建DDH的用户限制| 创建中国大陆地域的DDH必须 [实名认证](https://www.alibabacloud.com/help/doc-detail/52595.htm)。
+|创建DDH的用户限制|创建中国内地地域的DDH前必须完成[实名认证](https://www.alibabacloud.com/help/doc-detail/52595.htm)。
 
- |没有例外|
-|支持的网络类型|专有网络VPC。关于VPC，请参见 [什么是专有网络](../../../../intl.zh-CN/产品简介/什么是专有网络.md#)。|没有例外|
-|DDH及其ECS实例计费方式的限制| 预付费DDH：能创建按量付费或包年包月ECS实例。
+|没有例外|
+|支持的网络类型|专有网络VPC。VPC详情，请参见[什么是专有网络](/intl.zh-CN/产品简介/什么是专有网络.md)。|没有例外|
+|DDH及其ECS实例计费方式的限制|包年包月DDH：能创建按量付费或包年包月ECS实例。
 
- |没有例外|
-| 预付费DDH上创建包年包月ECS实例
+|没有例外|
+|包年包月DDH上创建包年包月ECS实例
 
- |ECS实例的计费周期终点不得晚于DDH计费周期的终点。|没有例外|
-| 预付费DDH上续费包年包月ECS实例
+|ECS实例的计费周期终点不得晚于DDH计费周期的终点。|没有例外|
+|包年包月DDH上续费包年包月ECS实例
 
- |ECS实例续费后计费周期的终点不得晚于DDH当前计费周期的终点。如果设置的自动续费时间违反了这条规则，则自动续费失败。|没有例外|
-|DDH上的ECS实例 [按量付费转为预付费](../../../../intl.zh-CN/产品定价/按量付费转预付费.md#)| 预付费DDH上的按量付费ECS实例转为包年包月实例后，计费周期的终点不得晚于DDH计费周期的终点。
+|ECS实例续费后计费周期的终点不得晚于DDH当前计费周期的终点。如果设置的自动续费时间违反了此规则，则自动续费失败。|没有例外|
+|DDH上的ECS实例按量付费转为包年包月|包年包月DDH上的按量付费ECS实例转为包年包月实例后，计费周期的终点不得晚于DDH计费周期的终点。
 
- |没有例外|
+|没有例外|
 |转换DDH计费方式|不支持。|没有例外|
-|共享宿主机与DDH之间迁移ECS实例| 只能迁移按量付费ECS实例，不支持迁移包年包月ECS实例和抢占式实例。
+|共享宿主机与DDH之间迁移ECS实例|只能迁移按量付费ECS实例，不支持迁移包年包月ECS实例和抢占式实例。
 
- |没有例外|
-|DDH之间迁移ECS实例|只能在同一个账号下 [宿主机规格](intl.zh-CN/产品简介/宿主机规格.md#) 相同的DDH之间迁移。本地SSD型DDH之间不允许迁移ECS实例。|没有例外|
+|没有例外|
+|DDH之间迁移ECS实例|只能在同一个账号下宿主机规格相同的DDH之间迁移。本地SSD型DDH之间不允许迁移ECS实例。宿主机规格详情，请参见[宿主机规格](/intl.zh-CN/产品简介/宿主机规格.md)。|没有例外|
 
