--- a/cn.zh-CN/产品简介/使用限制.md
+++ b/cn.zh-CN/产品简介/使用限制.md
@@ -1,30 +1,42 @@
-# 使用限制 {#concept_gjy_gkn_tdb .concept}
+# 使用限制
 
-本文介绍专有宿主机DDH的使用限制。
+本章节介绍DDH相关的使用限制。
 
-DDH的使用限制如下表所示。除下表所述使用限制外，ECS资源的使用限制也适用于在DDH上创建的ECS实例，详情请参见[ECS资源使用限制](../../../../cn.zh-CN/产品简介/使用限制.md#)。
+DDH相关的使用限制如下表所示。除下表所述使用限制外，ECS资源的使用限制也适用于在DDH上创建的ECS实例，详情请参见[ECS资源使用限制](/cn.zh-CN/产品简介/使用限制.md)。
 
 |限制项|限制描述|例外申请方式（例外上限）|
 |:--|:---|:-----------|
-|创建DDH的用户限制| [实名认证](https://help.aliyun.com/document_detail/37183.html)。
+|创建DDH的用户限制|完成[实名认证](https://help.aliyun.com/document_detail/37183.html)。
 
- |没有例外|
-|支持的网络类型|专有网络VPC。VPC详情，请参见[什么是专有网络](../../../../cn.zh-CN/产品简介/什么是专有网络.md#)。|没有例外|
-|DDH及其ECS实例计费方式的限制| 包年包月DDH：能创建按量付费或包年包月ECS实例。
+|没有例外|
+|支持的网络类型|专有网络VPC。VPC详情，请参见[什么是专有网络](/cn.zh-CN/产品简介/什么是专有网络.md)。|没有例外|
+|DDH及其ECS实例计费方式的限制|包年包月DDH：能创建按量付费或包年包月ECS实例。
 
- |没有例外|
-| 包年包月DDH上创建包年包月ECS实例
+|没有例外|
+|包年包月DDH上创建包年包月ECS实例
 
- |ECS实例的计费周期终点不得晚于DDH计费周期的终点。|没有例外|
-| 包年包月DDH上续费包年包月ECS实例
+|ECS实例的计费周期终点不得晚于DDH计费周期的终点。|没有例外|
+|包年包月DDH上续费包年包月ECS实例
 
- |ECS实例续费后计费周期的终点不得晚于DDH当前计费周期的终点。如果设置的自动续费时间违反了此规则，则自动续费失败。|没有例外|
-|DDH上的ECS实例[按量付费转为包年包月](../../../../cn.zh-CN/产品定价/按量付费转预付费.md#)| 包年包月DDH上的按量付费ECS实例转为包年包月实例后，计费周期的终点不得晚于DDH计费周期的终点。
+|ECS实例续费后计费周期的终点不得晚于DDH当前计费周期的终点。如果设置的自动续费时间违反了此规则，则自动续费失败。|没有例外|
+|DDH上的ECS实例按量付费转为包年包月|包年包月DDH上的按量付费ECS实例转为包年包月实例后，计费周期的终点不得晚于DDH计费周期的终点。
 
- |没有例外|
+|没有例外|
 |转换DDH计费方式|不支持。|没有例外|
-|共享宿主机与DDH之间迁移ECS实例| 只能迁移按量付费ECS实例，不支持迁移包年包月ECS实例和抢占式实例。
+|共享宿主机与DDH之间迁移ECS实例|只能迁移按量付费ECS实例，不支持迁移包年包月ECS实例和抢占式实例。
 
- |没有例外|
-|DDH之间迁移ECS实例|只能在同一个账号下宿主机规格相同的DDH之间迁移。本地SSD型DDH之间不允许迁移ECS实例。宿主机规格详情，请参见[宿主机规格](cn.zh-CN/产品简介/宿主机规格.md#)。|没有例外|
+|没有例外|
+|DDH之间迁移ECS实例|只能在同一个账号下宿主机规格相同的DDH之间迁移。本地SSD型DDH之间不允许迁移ECS实例。宿主机规格详情，请参见[宿主机规格](/cn.zh-CN/产品简介/宿主机规格.md)。|没有例外|
+|自动宕机迁移|本地SSD型DDH不支持自动宕机迁移。|没有例外|
+|ECS实例数量限制|-   以下DDH规格单台DDH上最多创建150台ECS实例：
+    -   g6t、c6t
+    -   g6s、c6s、r6s
+    -   g6、c6、r6
+    -   i2
+-   以下DDH规格单台DDH上最多创建100台ECS实例：
+    -   g5、c5、r5
+    -   v5
+    -   g5se、g5ne
+
+|没有例外|
 
