--- a/cn.zh-CN/产品简介/宿主机规格.md
+++ b/cn.zh-CN/产品简介/宿主机规格.md
@@ -1,27 +1,69 @@
-# 宿主机规格 {#concept_h3g_zzm_tdb .concept}
+# 宿主机规格
 
-专有宿主机DDH的规格提供了对应物理服务器的配置信息，决定了您能在宿主机上使用的ECS实例规格族，也决定了您能创建的ECS实例数量。
+专有宿主机DDH的规格决定了您能在DDH上创建的ECS实例规格族和ECS实例数量。本文介绍专有宿主机的规格及相应配置。
 
-DDH的宿主机规格是指DDH对应的物理服务器和云主机的规格配置，包括物理CPU型号和核数、虚拟CPU（vCPU）核数、CPU数量（Socket数）、内存和本地存储等资源的配置。宿主机规格根据使用场景定义，延续多租户宿主机ECS实例规格族的场景定义。只要DDH资源容量允许，在一种规格的DDH上能创建对应ECS实例规格族中任意一种规格的实例，例如，在一台**计算网络增强型**规格的DDH上，您能创建所有**sn1ne**规格的ECS实例。一台DDH上所有ECS实例的网络收发包能力总和或者网络带宽能力总和都不能超过DDH的能力。ECS实例规格族的详细信息，以及每种实例规格的网络性能，请参见[实例规格族](../../../../cn.zh-CN/实例/实例规格族.md#)。
+## 简介
+
+DDH的宿主机规格是指DDH对应的物理服务器的规格配置，包括物理CPU型号和核数、虚拟CPU（vCPU）核数、CPU数量（Socket数）、内存和本地存储等资源的配置。
+
+预定义实例规格根据使用场景，延续共享宿主机ECS实例规格族的场景定义。因此，您能在DDH上创建与其规格匹配的ECS实例，详情请参见下方表格。例如，在一台**通用型g6**规格的DDH上，您能创建所有**g6/c6/r6/ic6**规格的ECS实例。ECS实例规格族详情，以及每种实例规格的网络性能，请参见[实例规格族](/cn.zh-CN/实例/实例规格族.md)。
+
+自定义实例规格支持自定义vCPU和内存配比。例如，在一台**通用超分型g6s**规格的DDH上，您能创建自定义规格的ECS实例，按需调整需要的vCPU核数和内存大小。
+
+## 在售规格
 
 目前已经支持的DDH宿主机规格如下表所示。
 
-|**宿主机规格**|计算网络增强型|通用网络增强型|内存网络增强型|通用型|计算型|内存型|本地SSD型|CPU超分型|存储增强型|网络增强型|
-|**支持的ECS实例规格族**|sn1ne|sn2ne|se1ne|g5|c5|r5|i2|v5|g5se|g5ne|
-|**CPU数量（Socket数）**|2|2|2|2|2|2|2|2|2|2|
-|**物理CPU型号（2.5 GHz主频）**|Intel Xeon E5-2682 v4（Broadwell）|Intel Xeon E5-2682 v4（Broadwell）|Intel Xeon E5-2682 v4（Broadwell）|Intel Xeon Platinum 8163（Skylake）|Intel Xeon Platinum 8163（Skylake）|Intel Xeon Platinum 8163（Skylake）|Intel Xeon Platinum 8163（Skylake）|Intel Xeon Platinum 8163（Skylake）|Intel Xeon Platinum 8163（Skylake）|Intel Xeon Platinum 8163（Skylake）|
-|**物理CPU核数**|32|32|32|48|48|48|48|48|48|48|
-|**vCPU核数**[\*](#)|56|56|56|84|86|86|80|336[\*\*](#)|70|72|
-|**内存（GiB）**|112|224|448|336|172|688|640|672|336|288|
-|**本地SSD盘（GiB）**[\*\*\*](#)|N/A|N/A|N/A|N/A|N/A|N/A|17880|N/A|N/A|N/A|
-|**网络带宽能力（出/入，Gbit/s）**[\*\*\*\*](#)|10|10|10|25|25|25|25|25|25|25|
-|**网络收发包能力（出/入，万PPS）**[\*\*\*\*](#)|450|450|450|550|550|550|550|550|550|2400|
+**说明：**
 
-\* vCPU核数 = 物理CPU核数\*2－主机预留的vCPU核数。
+存储增强型g5se宿主机规格正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
-\*\* vCPU核数 = （物理CPU核数\*2－主机预留的vCPU核数）\*CPU超分比。
+|专有宿主机规格|支持的ECS实例规格族|CPU数量（Socket数）|物理CPU型号|物理CPU核数|vCPU核数|内存（GiB）|本地SSD盘（GiB）[③](#footnote)|网络带宽能力（出/入，Gbit/s）[④](#network)|网络收发包能力（出/入，万PPS）[④](#network)|
+|-------|-----------|--------------|-------|-------|------|-------|-------------------------|-------------------------------|------------------------------|
+|安全增强通用型g6t|g6t|2|Intel ® Xeon ® Platinum 8269（Cascade Lake）|52|104[①](#vCPU)|384|无|32|2400|
+|安全增强计算型c6t|c6t|2|Intel ® Xeon ® Platinum 8269（Cascade Lake）|52|104[①](#vCPU)|192|无|32|2400|
+|计算超分型c6s|自定义规格|2|Intel Xeon Platinum 8269CY（Cascade Lake）|52|208[②](#vCPU-CPU)|180|无|25|600|
+|通用超分型g6s|自定义规格|2|Intel Xeon Platinum 8269CY（Cascade Lake）|52|312[②](#vCPU-CPU)|372|无|25|600|
+|内存超分型r6s|自定义规格|2|Intel Xeon Platinum 8269CY（Cascade Lake）|52|416[②](#vCPU-CPU)|750|无|25|600|
+|通用型g6|-   ic6
+-   c6
+-   g6
+-   r6
 
-\*\*\* 更多本地SSD盘的信息，请参见[本地盘](../../../../cn.zh-CN/块存储/本地盘.md#)。
+|2|Intel Xeon Platinum 8269CY（Cascade Lake）|52|104[①](#vCPU)|384|无|25|600|
+|计算型c6|-   ic6
+-   c6
 
-\*\*\*\* 一台DDH上所有ECS实例的网络收发包能力总和或者网络带宽能力总和都不能超过DDH的能力。每种实例规格的网络性能，请参见[实例规格族](../../../../cn.zh-CN/实例/实例规格族.md#)。
+|2|Intel Xeon Platinum 8269CY（Cascade Lake）|52|104[①](#vCPU)|192|无|25|600|
+|内存型r6|-   ic6
+-   c6
+-   g6
+-   r6
+
+|2|Intel Xeon Platinum 8269CY（Cascade Lake）|52|104[①](#vCPU)|768|无|25|600|
+|本地SSD型i2|i2|2|Intel Xeon Platinum 8163（Skylake）|48|80[①](#vCPU)|640|17880|25|550|
+|通用型g5|g5|2|Intel Xeon Platinum 8163（Skylake）|48|84[①](#vCPU)|336|无|25|550|
+|计算型c5|c5|2|Intel Xeon Platinum 8163（Skylake）|48|86[①](#vCPU)|172|无|25|550|
+|内存型r5|r5|2|Intel Xeon Platinum 8163（Skylake）|48|86[①](#vCPU)|688|无|25|550|
+|CPU超分型v5|v5|2|Intel Xeon Platinum 8163（Skylake）|48|336[②](#vCPU-CPU)|672|无|25|550|
+|存储增强型g5se|g5se|2|Intel Xeon Platinum 8163（Skylake）|48|70[①](#vCPU)|336|无|25|550|
+|网络增强型g5ne|g5ne|2|Intel Xeon Platinum 8163（Skylake）|48|72[①](#vCPU)|288|无|25|2400|
+
+① 非超分型规格的vCPU核数 = 物理CPU核数\*2－主机预留的vCPU核数。
+
+② 超分型规格的vCPU核数 = （物理CPU核数\*2－主机预留的vCPU核数）\*CPU超分比。
+
+③ 更多本地SSD盘的信息，请参见[本地盘](/cn.zh-CN/块存储/块存储介绍/本地盘.md)。
+
+④ 一台DDH上所有ECS实例的网络收发包能力总和或者网络带宽能力总和都不能超过DDH的能力。每种实例规格的网络性能，请参见[实例规格族](/cn.zh-CN/实例/实例规格族.md)。
+
+## 停售规格
+
+已停售的规格如下表所示。
+
+|宿主机规格|支持的ECS实例规格族|CPU数量（Socket数）|物理CPU型号|物理CPU核数|vCPU核数|内存（GiB）|本地SSD盘（GiB）|网络带宽能力（出/入，Gbit/s）|网络收发包能力（出/入，万PPS）|
+|-----|-----------|--------------|-------|-------|------|-------|-----------|------------------|-----------------|
+|计算网络增强型sn1ne|sn1ne|2|Intel Xeon E5-2682 v4（Broadwell）|32|56[①](#vCPU)|112|无|10|450|
+|通用网络增强型sn2ne|sn2ne|2|Intel Xeon E5-2682 v4（Broadwell）|32|56[①](#vCPU)|224|无|10|450|
+|内存网络增强型se1ne|se1ne|2|Intel Xeon E5-2682 v4（Broadwell）|32|56[①](#vCPU)|480|无|10|450|
 
