--- a/intl.zh-CN/用户指南/续费DDH/开通自动续费.md
+++ b/intl.zh-CN/用户指南/续费DDH/开通自动续费.md
@@ -2,9 +2,7 @@
 
 为避免因忘记续费而导致DDH被意外释放的情况，您可以为包年包月DDH开通自动续费功能，由系统自动在指定时间点为DDH续费。本文分别介绍创建DDH时和创建DDH后开通自动续费的操作步骤。
 
-包年包月DDH的状态不能为**已过期**。变更DDH状态，请参见[生命周期](/intl.zh-CN/产品简介/生命周期.md)。
-
-开通自动续费后，系统在DDH到期前第9天08:00:00（UTC+8）自动扣款续费。
+包年包月DDH的状态不能为**已过期**。变更DDH状态，请参见[生命周期](/intl.zh-CN/产品简介/功能特性/生命周期.md)。
 
 开通自动续费后，系统在DDH到期当天（T）自动从您绑定的信用卡或PayPal账户扣款。若扣款失败，分别在到期后第7天（T+6）和第15天（T+14）再次扣款，直到续费成功。若三次续费均失败，则直接停止DDH。
 
@@ -27,15 +25,13 @@
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
 
-2.  登录[ECS管理控制台](https://partners-intl.console.aliyun.com/#/ecs)。
+2.  在左侧导航栏，选择**实例与镜像** \> **专有宿主机 DDH**。
 
-3.  在左侧导航栏，单击**实例与镜像** \> **专有宿主机 DDH**。
+3.  在顶部菜单栏左上角处，选择地域。
 
-4.  在顶部菜单栏左上角处，选择地域。
+4.  选中目标DDH，把鼠标移动到**续费**后的![更多](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4929188161/p265427.png)图标，然后在下拉菜单中选择**设置自动续费状态**。
 
-5.  选中目标DDH，单击**操作** \> **设置自动续费状态**。
-
-6.  在设置宿主机自动续费状态对话框，完成以下配置。
+5.  在设置自动续费状态对话框，完成以下配置。
 
     1.  打开**开启自动续费**开关。
 
@@ -43,6 +39,6 @@
 
     3.  单击**确定**。
 
-    ![设置自动续费](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3653909951/p1353.png)
+    ![自动续费](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4929188161/p265405.png)
 
 
