--- a/intl.zh-CN/产品定价/计费概述.md
+++ b/intl.zh-CN/产品定价/计费概述.md
@@ -1,25 +1,34 @@
-# 计费概述 {#concept_vfv_kln_tdb .concept}
+# 计费概述
 
-本文介绍DDH的计费方式、价格适用的资源范围以及影响价格的因素。
+本文介绍使用DDH时相关资源的计费方式和购买DDH时的支付方式。
 
-## 购买渠道 {#section_qwg_mb5_tdb .section}
+## DDH购买渠道
 
-您可以通过[ECS管理控制台](https://ecs.console.aliyun.com/#/home)或者DDH API [AllocateDedicatedHosts](../../../../intl.zh-CN/API参考/AllocateDedicatedHosts.md#)购买DDH。
+您可以通过[ECS管理控制台](https://ecs.console.aliyun.com/#/home)或者DDH API [AllocateDedicatedHosts](/intl.zh-CN/API参考/专有宿主机/AllocateDedicatedHosts.md)购买DDH。
 
-## 计费资源范围 {#section_rwg_mb5_tdb .section}
+## DDH相关资源计费
 
-创建DDH时，您要为DDH对应物理服务器上的所有资源付费，包括CPU、内存以及本地盘（如果DDH规格为本地SSD型），按使用时长计费。DDH创建后，DDH资源的使用情况，即运行了多少台ECS实例，不影响DDH计费。
+使用DDH时，您需要先创建一台DDH，然后在DDH上创建云服务器ECS。可能涉及的资源计费如下表所示：
 
-在一台DDH上创建ECS实例时，您不需要再为DDH上的资源付费，但是需要为ECS实例的镜像、云盘、公网带宽、快照等资源付费。ECS实例的详细计费信息，请参见[DDH上的ECS资源计费](intl.zh-CN/产品定价/DDH上的ECS资源计费.md#)。
+|创建对象|涉及资源类型|计费方式|资源价格|
+|----|------|----|----|
+|DDH|创建DDH时，您要为DDH对应物理服务器上的所有资源付费，包括： -   CPU
+-   内存
+-   本地盘（如果DDH规格为本地SSD型）
 
-## 计费方式 {#section_swg_mb5_tdb .section}
-
-[包年包月](intl.zh-CN/产品定价/包年包月.md#)：先付费，再使用，包括按年付费、按月付费或按周付费。
-
-## 价格影响因素 {#section_uwg_mb5_tdb .section}
-
-DDH的价格受以下因素影响：
-
--   [宿主机规格](../../../../intl.zh-CN/产品简介/宿主机规格.md#)：DDH的配置。
+|[包年包月](/intl.zh-CN/产品定价/包年包月.md)：先付费后使用。|DDH的价格受以下因素影响： -   [宿主机规格](/intl.zh-CN/产品简介/宿主机规格.md)：决定DDH的配置。
 -   地域：DDH对应的物理服务器所在的数据中心的物理位置。
+
+详细价格信息请参见[云服务器ECS定价](https://www.alibabacloud.com/product/ecs)中的**专有宿主机**区域。 |
+|DDH上的云服务器ECS|除CPU、内存和本地盘外，一台云服务器ECS还包括镜像、云盘、公网带宽、快照等资源。因此在DDH上创建一台云服务器ECS时，您需要为镜像、云盘、公网带宽、快照等资源付费。|视资源类型而定，详情请参见[计费概述](/intl.zh-CN/产品计费/计费概述.md)。|视资源类型而定，详情请参见[计费概述](/intl.zh-CN/产品计费/计费概述.md)。|
+
+## 支付方式
+
+DDH支持以下支付方式。
+
+-   账号绑定的信用卡或PayPal账号。具体步骤，请参见[添加支付信息](https://www.alibabacloud.com/help/zh/doc-detail/50517.html)。
+-   账号名下的可用于DDH的优惠券。
+
+    **说明：** 您可以登录[费用中心](https://billing.console.aliyun.com/#/expense/outline)，在**优惠券管理**页面上查看优惠券的**适用产品**，从而判断优惠券是否适用于DDH。
+
 
